silent code cleanup