@@ -42,31 +42,32 @@ import wpds.interfaces.State;
 
 public class AdvancedBoomerangStats<W extends Weight> implements IBoomerangStats<W> {
 
-  private Map<Query, AbstractBoomerangSolver<W>> queries = Maps.newHashMap();
-  private Set<WeightedTransition<Field, INode<Node<Edge, Val>>, W>> globalFieldTransitions =
+  private final Map<Query, AbstractBoomerangSolver<W>> queries = Maps.newHashMap();
+  private final Set<WeightedTransition<Field, INode<Node<Edge, Val>>, W>> globalFieldTransitions =
       Sets.newHashSet();
   private int fieldTransitionCollisions;
-  private Set<WeightedTransition<Edge, INode<Val>, W>> globalCallTransitions = Sets.newHashSet();
+  private final Set<WeightedTransition<Edge, INode<Val>, W>> globalCallTransitions =
+      Sets.newHashSet();
   private int callTransitionCollisions;
-  private Set<Rule<Field, INode<Node<Edge, Val>>, W>> globalFieldRules = Sets.newHashSet();
+  private final Set<Rule<Field, INode<Node<Edge, Val>>, W>> globalFieldRules = Sets.newHashSet();
   private int fieldRulesCollisions;
-  private Set<Rule<Edge, INode<Val>, W>> globalCallRules = Sets.newHashSet();
+  private final Set<Rule<Edge, INode<Val>, W>> globalCallRules = Sets.newHashSet();
   private int callRulesCollisions;
-  private Set<Node<Edge, Val>> reachedForwardNodes = Sets.newHashSet();
+  private final Set<Node<Edge, Val>> reachedForwardNodes = Sets.newHashSet();
   private int reachedForwardNodeCollisions;
 
-  private Set<Node<Edge, Val>> reachedBackwardNodes = Sets.newHashSet();
+  private final Set<Node<Edge, Val>> reachedBackwardNodes = Sets.newHashSet();
   private int reachedBackwardNodeCollisions;
-  private Set<Method> callVisitedMethods = Sets.newHashSet();
-  private Set<Method> fieldVisitedMethods = Sets.newHashSet();
+  private final Set<Method> callVisitedMethods = Sets.newHashSet();
+  private final Set<Method> fieldVisitedMethods = Sets.newHashSet();
   private int arrayFlows;
   private int staticFlows;
-  private boolean COUNT_TOP_METHODS = false;
-  private Map<String, Integer> backwardFieldMethodsRules = new TreeMap<>();
-  private Map<String, Integer> backwardCallMethodsRules = new TreeMap<>();
+  private final boolean COUNT_TOP_METHODS = false;
+  private final Map<String, Integer> backwardFieldMethodsRules = new TreeMap<>();
+  private final Map<String, Integer> backwardCallMethodsRules = new TreeMap<>();
 
-  private Map<String, Integer> forwardFieldMethodsRules = new TreeMap<>();
-  private Map<String, Integer> forwardCallMethodsRules = new TreeMap<>();
+  private final Map<String, Integer> forwardFieldMethodsRules = new TreeMap<>();
+  private final Map<String, Integer> forwardCallMethodsRules = new TreeMap<>();
 
   public static <K> Map<K, Integer> sortByValues(final Map<K, Integer> map) {
     Comparator<K> valueComparator =
@@ -159,7 +160,7 @@ public class AdvancedBoomerangStats<W extends Weight> implements IBoomerangStats
   private void increaseMethod(String method, Map<String, Integer> map) {
     Integer i = map.get(method);
     if (i == null) {
-      i = new Integer(0);
+      i = Integer.valueOf(0);
     }
     map.put(method, ++i);
   }
@@ -179,7 +180,7 @@ public class AdvancedBoomerangStats<W extends Weight> implements IBoomerangStats
     s +=
         String.format(
             "Queries (Forward/Backward/Total): \t\t %s/%s/%s\n",
-            forwardQuery, backwardQuery, queries.keySet().size());
+            forwardQuery, backwardQuery, queries.size());
     s +=
         String.format(
             "Visited Methods (Field/Call): \t\t %s/%s\n",
@@ -258,7 +259,7 @@ public class AdvancedBoomerangStats<W extends Weight> implements IBoomerangStats
       }
       max = Math.max(size, max);
     }
-    float average = ((float) totalReached) / queries.keySet().size();
+    float average = ((float) totalReached) / queries.size();
     String s = String.format("Reachable nodes (Min/Avg/Max): \t\t%s/%s/%s\n", min, average, max);
     s += String.format("Maximal Query: \t\t%s\n", maxQuery);
     return s;
@@ -292,9 +293,8 @@ public class AdvancedBoomerangStats<W extends Weight> implements IBoomerangStats
         if (other.t != null) return false;
       } else if (!t.equals(other.t)) return false;
       if (w == null) {
-        if (other.w != null) return false;
-      } else if (!w.equals(other.w)) return false;
-      return true;
+        return other.w == null;
+      } else return w.equals(other.w);
     }
   }
 
